// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractCLI with mocked child_process.spawn collections.info({"branchId": "branch-id", "collectionId": "collection-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "collection",
      "project-id",
      "collection-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "collections",
      "project-id",
      "--branch",
      "branch-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "collections",
      "project-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commit",
      "project-id",
      "commit-sha",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commit",
      "project-id",
      "branch-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commit",
      "project-id",
      "commit-sha",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commit",
      "project-id",
      "branch-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commit",
      "project-id",
      "commit-sha",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commit",
      "project-id",
      "branch-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commits",
      "project-id",
      "branch-id",
      "--layer-id",
      "layer-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commits",
      "project-id",
      "branch-id",
      "--layer-id",
      "layer-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commits",
      "project-id",
      "branch-id",
      "--file-id",
      "file-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commits",
      "project-id",
      "branch-id",
      "--file-id",
      "file-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commits",
      "project-id",
      "branch-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "commits",
      "project-id",
      "branch-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "file",
      "project-id",
      undefined,
      "file-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 2`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "file",
      "project-id",
      undefined,
      "file-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "files",
      "project-id",
      "commit-sha",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "files",
      "project-id",
      undefined,
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.data({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "layer",
      "data",
      "project-id",
      undefined,
      "file-id",
      "layer-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "layer",
      "meta",
      "project-id",
      undefined,
      "file-id",
      "layer-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  Array [
    "fixtures/abstract-cli",
    Array [
      "layers",
      "project-id",
      undefined,
      "file-id",
      "--user-token=1",
      "--api-url=https://api.goabstract.com",
    ],
  ],
]
`;
